--- a/DataScienceGuidedCapstone/Notebooks/05_modeling.ipynb
+++ b/DataScienceGuidedCapstone/Notebooks/05_modeling.ipynb
@@ -1413,8 +1413,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** The reason for Big Mountain's price model being so high was likely due to the data being skewed towards the lower end of the spectrum regarding the extra features that they possess. Trying to model other outliers' pricing models may lend insight into why despite having a high ticket price the valuation was even higher. If it was found that similarly positioned resorts also had lower prices than their valuations then a ticket price hike would be reasonable. Simply modifying the features or resorts of the data set would yield possibly correlations in the price data that may capture more subtle m"
+    "**A: 2** The reason for Big Mountain's price model being so high was likely due to the data being skewed towards the lower end of the spectrum regarding the extra features that they possess. Trying to model other outliers' pricing models may lend insight into why despite having a high ticket price the valuation was even higher. If it was found that similarly positioned resorts also had lower prices than their valuations then a ticket price hike would be reasonable. Simply modifying the features or resorts of the data set would yield possibe correlations in the price data that may capture more subtle mechanisms in the valuation of underlyings that weren't as prominient when considered alongside the entire dataset. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
